--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Daily motivation</title>
         <link rel="stylesheet" href="index.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Arizonia&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Arizonia&family=Croissant+One&display=swap" rel="stylesheet">
     </head>
     <body>
         <script src="index.js"></script>
