--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <script src="index.js"></script>
         <p class="header-text">Motivational Quotes</p>
-        <div class="quotes-space" id="quote-fetch">
-
+        <div class="quotes-space" id="quote-fetch"></div>
+        <div class="button-container">
+            <button class="button" onclick="fetchQuote()">Click me</button>
         </div>
-        <button class="button" onclick="fetchQuote()">Click me</button>
     </body>
 </html>
